--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
 
   <!-- TensorFlow.js -->
   <script defer src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@0.11.4/dist/tf.min.js"></script>
+  <script defer src="./main.js"></script>
 </head>
 <body>
-  
+
 </body>
 </html>
